--- a/AndroidApp.json
+++ b/AndroidApp.json
@@ -7933,7 +7933,6 @@
     "FFlagAppChatTiltMenuConnectIcon": true,
     "FFlagAppChatUseNewSelectChatMembers2": true,
     "DFFlagSimSolverCleanupAeroMemScopes2": true,
-    "DFStringDynamicRCCMemoryLimitsCustomPoliciesJson": "{{\"type\": \"MinLimitAtCapacity\", \"playerCapacity\": 200, \"valueMB\": 13000}}",
     "FFlagAXLookViewportUseFallbackEmote": true,
     "DFFlagInferredCrashSkipUpdatingUserIdOnLogOut": true,
     "DFFlagUnifyLegacyJointGeometry": true,
@@ -7943,7 +7942,6 @@
     "FFlagFixRolloutExpirationParsingLogic": true,
     "FFlagModernizeSupportsSwitchToSettingsApp": true,
     "FFlagFixBannerButtonSize": true,
-    "FFlagRemoveEnrollmentMap": true,
     "FFlagFixSafetyBubbleWidth": true,
     "FFlagTPoseBlockyDetectionUseLocalTransformFix": true,
     "FFlagForgotPasswordConsoleVR": true,
@@ -8123,22 +8121,75 @@
     "FFlagFixCapturesExperiencesOverride": true,
     "FFlagEnableSplitButtonWithoutActionDropdown": true,
     "FFlagHideCoreGui": true,
-    "DFIntPacketMissingFrameWindowReportIntervalSec": 60000,
+    "DFIntPacketMissingFrameWindowReportIntervalSec": 300000,
     "FFlagAllowSoundServiceIgnoreGameSettings": true,
     "FFlagEnableCoreVoiceManagerEmitOnReportJoinFailed": true,
     "FFlagEnableTopBarIconButtonBackgroundProps": true,
     "FFlagEnableCrossDMEventSequencing": true,
     "FFlagJoinCrossExpVoiceWithPartyId": true,
     "DFIntBatchPostLimit": 20,
-    "FFlagRenderReportGfxTechnology_Rollout": "true;60;2024-10-28T16:22:14",
-    "FFlagRenderTestWaitForPendingUpdates6_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:25:22",
-    "FFlagInsertServiceIsLocalFileFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:38:59",
-    "DFFlagMeasureMissedProcessPackets2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:39:42",
-    "FFlagUseCoreLuaSettings2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:07:48",
-    "FFlagUseCoreDebugSettings2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:13",
-    "DFFlagSimAeroEnableFluidForceSensor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:52",
-    "FFlagDeprecateIos12Apis_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:14:59",
     "FFlagEnableLifeCycleManagerLua": true,
+    "FFlagRenderReportGfxTechnology": true,
+    "FFlagRenderTestWaitForPendingUpdates6": true,
+    "FFlagInsertServiceIsLocalFileFix": true,
+    "DFFlagMeasureMissedProcessPackets2": true,
+    "FFlagUseCoreDebugSettings2": true,
+    "FFlagUseCoreLuaSettings2": true,
+    "DFFlagSimAeroEnableFluidForceSensor": true,
+    "FFlagDeprecateIos12Apis": true,
+    "FFlagFixSmoothWaterLocalLights": true,
+    "FFlagVoxelizerFixUnalignedRead": true,
+    "FFlagComputeBoxMappedDataOnDemand2": true,
+    "FFlagEnableConnectDisconnectAnalytics": true,
+    "FFlagEnableConnectDisconnectButtonAnalytics": true,
+    "FFlagEnableConnectDisconnectInSettingsAndChrome": true,
+    "FFlagSendDevicePermissionsModalAnalytics": true,
+    "FFlagPersistentVoiceDisconnectV2": true,
+    "FFlagGetRawMicrophonePermissions": true,
+    "FFlagJoinWithoutMicPermissions3": true,
+    "FFlagCapturesSupportExternalStorageOSX": true,
+    "FFlagEnableSeamlessVoiceUX2": true,
+    "FFlagSeamlessJoinWithoutVoice": true,
+    "FFlagSeamlessVoiceFTUXV2": true,
+    "FFlagCrashpadReportGfxTechnology": true,
+    "FFlagReportGfxTechnologyOnANR": true,
+    "DFFlagEnableToSwitchToSettingsAppWithRouteMac": true,
+    "DFFlagEnableToSwitchToSettingsAppWithRouteWin32": true,
+    "FFlagCrashpadReportGfxTechnologyMac": true,
+    "FFlagCrashpadReportGfxTechnologyStudio": true,
+    "FFlagCrashpadReportGfxTechnologyWindows": true,
+    "FFlagEnableSeamlessVoiceConnectDisconnectButton2": true,
+    "FFlagACEFaceAnimationEditorUIFixes": true,
+    "FFlagMeshLoDAnalyticsFixIsLocalAsset": true,
+    "EnableToSwitchToSettingsAppWithRouteAndroid": true,
+    "FFlagFixPeekViewJitter5": true,
+    "FFlagTCTexturesListInImGui": true,
+    "FFlagAddClientChannelToHeartbeat_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:32:18",
+    "FFlagAXTryOnAvatarProperties2": true,
+    "FFlagFFlagAXCommunityAvatarEntryButtonTooltip2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:34:45",
+    "FFlagVideoFrameSupportAppContent": true,
+    "FFlagAXHideCATooltipsForVR_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:38:29",
+    "FFlagEnableRetryForLinkingProtocolFetch": true,
+    "FFlagEnableToSwitchToSettingsAppWithRouteLua": true,
+    "FFlagShowDevicePermissionsModal3": true,
+    "FFlagAXLooksBackendToasts_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagAXLooksComposerPolish_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagFFlagAXRepositionLooksFormKeyboard_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagLooksComposerConfirmationModal_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagHideStartupController_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:51:03",
+    "FFlagRenderCrashOnFailedMemoryMap2": true,
+    "FFlagAXFixBundleVerifiedBadgeInWidgets_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagAXHideRecommendationsOnFetchFailure_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagFixDuplicateBubblesWithChatChat_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:13:53",
+    "FFlagAXSupportShareForLook3": true,
+    "FFlagAXCommunityAvatarSharePrompt": true,
+    "FFlagLooksAvatarPDPShowDelete": true,
+    "FFlagGeometryBuffersTelemetry_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:25:52",
+    "FFlagAXCommunityAvatarSharePromptHandleErrors": true,
+    "FFlagAXEnableLookComposer3": true,
+    "FFlagAXLookViewportCameraAlignment": true,
+    "DFIntRobloxTelemetryPointV2ProdTrafficPercent_Staged": "1;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:30:39",
+    "FFlagAXMySharedAvatarsTitleTooltip2": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -8364,7 +8415,7 @@
     "DFIntCLI61776a": 10000,
     "DFFlagCLI61776": true,
     "FFlagLuaAppColorSystem1_1TestCache1": true,
-    "FFlagLuaAppColorSystem1_1TestEnabled1": true,
+    "FFlagLuaAppColorSystem1_1TestEnabled1": false,
     "FFlagLuaAppUseUIBloxColorPalettes1": true,
     "FStringProfileQRPageLoad": "ProfileQRPageLoadAndroid",
     "FStringProfileQRPageLoadFailed": "ProfileQRPageLoadFailedAndroid",
@@ -8634,7 +8685,7 @@
     "FFlagVoiceChatIXPToolRegisterExposureSeparately": true,
     "AndroidEnableDeprecateActivityStartMVP": true,
     "EnableCPU64BitInDMParams": true,
-    "FFlagEnableZstdForClientSettings": false,
+    "FFlagEnableZstdForClientSettings": true,
     "DFFlagSystemUtilAndroidReturnCorrect64BitCPU": true,
     "FFlagEnableMoveAdornUpdate": true,
     "FFlagEarlyDataModelInit6": true,
@@ -8673,30 +8724,41 @@
     "DFFlagAssetPreloadingUrlVersionEnabled2": true,
     "DFFlagEnableMeshPreloading2": true,
     "DFFlagTeleportPreloadingMetrics5": true,
-    "FFlagCrashpadReportGfxTechnology": true,
     "DFFlagTeleportClientAssetPreloadingDoingExperiment2": true,
     "DFIntTeleportClientAssetPreloadingHundredthsPercentage2": 10000,
     "DFFlagTeleportClientAssetPreloadingEnabled9": true,
     "FFlagAssetPreloadingIXP": true,
     "FFlagVideoFrameYuvGPU8": true,
-    "FFlagReportGfxTechnologyOnANR": true,
     "FFlagSendWebviewUserAgentEnabledAndroid": true,
     "EnableAndroidCdnVersionCheck": "true",
     "DFIntLightgridAsyncChunkContextCount": 4,
     "FFlagUserFixOrbitalCam": true,
     "FFlagSimpleTimerUseRuntimeSyncPrims": true,
     "FFlagEnableExperienceCoordinator6": true,
-    "DFFlagUseVisBugChecks_PlaceFilter": "true;7208091524;7902470429;10489114145;9872472334;8481844229;299659045",
+    "DFFlagUseVisBugChecks_PlaceFilter": "true;7208091524;7902470429;10489114145;9872472334;8481844229;299659045;82695214392018;92359758414863",
     "FFlagSkipInvisibleLayoutViewport": false,
     "FFlagPasskeySignupAndroidIterationEnabled": true,
     "FFlagScreenshotsIsActive_v1": true,
     "ModernizeSwitchToSettingsAppAndroid": "true",
-    "DFFlagReportMoreMemoryStatsInMemoryProfilingSnapshots_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:22:55",
-    "FFlagEnableAnimatorAnalyticsForRetargeting_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:28:29",
     "FFlagGetFriendCountFromNetwork": true,
-    "DFFlagEnableDeviceMemoryPercentageForHarmony_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:21:57",
-    "FStringFlagRepoGitHashFastString": "57bd8003611bf3ba1e7de6979ff72ac82f76ad84",
-    "DFStringFlagRepoGitHashDynamicString": "57bd8003611bf3ba1e7de6979ff72ac82f76ad84",
-    "FStringFlipTimeStampFastString": "2024-10-28T17:23:18.480Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-28T17:23:18.480Z"
+    "DFFlagReportMoreMemoryStatsInMemoryProfilingSnapshots": true,
+    "FFlagEnableAnimatorAnalyticsForRetargeting": true,
+    "DFFlagEnableDeviceMemoryPercentageForHarmony": true,
+    "FFlagVoxelGridNew5_PlaceFilter": "false;14870105714;14119723130;5301474388;14848219783;12805291036;5233782396;15031522190;11729688377;11879754496",
+    "FFlagSendLowMemoryTelemetry": true,
+    "DFIntLowMemoryAnalyticsThrottleHundredthsPercent": 10,
+    "DFIntLowMemoryStatsThrottleHundredthsPercent": 10,
+    "FFlagEnableShowVoiceUIV6": true,
+    "FIntScreenshotsExtraToastDuration": 10,
+    "FFlagUseAssetTypeForRefinementKeys": true,
+    "FFlagJoinTimeIXP2": true,
+    "FFlagAXFixLookComposerExitPrompt_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagAXLookComposerStepsRefactor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "DFIntRbxStorageErrorLogHundredthsPercent": 100,
+    "DFIntRbxStorageInitHundredthsPercent": 100,
+    "FFlagAXEnableCommunityAvatarsEntryPoint2": true,
+    "FStringFlagRepoGitHashFastString": "70c2cde27f3e4ceaa00ebe0b6d8309ba8c04d33f",
+    "DFStringFlagRepoGitHashDynamicString": "70c2cde27f3e4ceaa00ebe0b6d8309ba8c04d33f",
+    "FStringFlipTimeStampFastString": "2024-10-28T22:33:04.869Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:33:04.869Z"
 }
