--- a/MacStudioApp.json
+++ b/MacStudioApp.json
@@ -7933,7 +7933,6 @@
     "FFlagAppChatTiltMenuConnectIcon": true,
     "FFlagAppChatUseNewSelectChatMembers2": true,
     "DFFlagSimSolverCleanupAeroMemScopes2": true,
-    "DFStringDynamicRCCMemoryLimitsCustomPoliciesJson": "{{\"type\": \"MinLimitAtCapacity\", \"playerCapacity\": 200, \"valueMB\": 13000}}",
     "FFlagAXLookViewportUseFallbackEmote": true,
     "DFFlagInferredCrashSkipUpdatingUserIdOnLogOut": true,
     "DFFlagUnifyLegacyJointGeometry": true,
@@ -7943,7 +7942,6 @@
     "FFlagFixRolloutExpirationParsingLogic": true,
     "FFlagModernizeSupportsSwitchToSettingsApp": true,
     "FFlagFixBannerButtonSize": true,
-    "FFlagRemoveEnrollmentMap": true,
     "FFlagFixSafetyBubbleWidth": true,
     "FFlagTPoseBlockyDetectionUseLocalTransformFix": true,
     "FFlagForgotPasswordConsoleVR": true,
@@ -8123,22 +8121,75 @@
     "FFlagFixCapturesExperiencesOverride": true,
     "FFlagEnableSplitButtonWithoutActionDropdown": true,
     "FFlagHideCoreGui": true,
-    "DFIntPacketMissingFrameWindowReportIntervalSec": 60000,
+    "DFIntPacketMissingFrameWindowReportIntervalSec": 300000,
     "FFlagAllowSoundServiceIgnoreGameSettings": true,
     "FFlagEnableCoreVoiceManagerEmitOnReportJoinFailed": true,
     "FFlagEnableTopBarIconButtonBackgroundProps": true,
     "FFlagEnableCrossDMEventSequencing": true,
     "FFlagJoinCrossExpVoiceWithPartyId": true,
     "DFIntBatchPostLimit": 20,
-    "FFlagInsertServiceIsLocalFileFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:38:59",
-    "DFFlagMeasureMissedProcessPackets2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:39:42",
-    "FFlagVoiceChatStopSendingIceCandidate": false,
-    "FFlagUseCoreDebugSettings2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:13",
-    "DFFlagSimAeroEnableFluidForceSensor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:52",
-    "FFlagDeprecateIos12Apis_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:14:59",
     "FFlagEnableLifeCycleManagerLua": true,
     "FFlagRenderReportGfxTechnology": true,
     "FFlagRenderTestWaitForPendingUpdates6": true,
+    "FFlagInsertServiceIsLocalFileFix": true,
+    "DFFlagMeasureMissedProcessPackets2": true,
+    "FFlagUseCoreDebugSettings2": true,
+    "FFlagUseCoreLuaSettings2": true,
+    "DFFlagSimAeroEnableFluidForceSensor": true,
+    "FFlagDeprecateIos12Apis": true,
+    "FFlagFixSmoothWaterLocalLights": true,
+    "FFlagVoxelizerFixUnalignedRead": true,
+    "FFlagComputeBoxMappedDataOnDemand2": true,
+    "FFlagEnableConnectDisconnectAnalytics": true,
+    "FFlagEnableConnectDisconnectButtonAnalytics": true,
+    "FFlagEnableConnectDisconnectInSettingsAndChrome": true,
+    "FFlagSendDevicePermissionsModalAnalytics": true,
+    "FFlagPersistentVoiceDisconnectV2": true,
+    "FFlagGetRawMicrophonePermissions": true,
+    "FFlagJoinWithoutMicPermissions3": true,
+    "FFlagCapturesSupportExternalStorageOSX": true,
+    "FFlagEnableSeamlessVoiceUX2": true,
+    "FFlagSeamlessJoinWithoutVoice": true,
+    "FFlagSeamlessVoiceFTUXV2": true,
+    "FFlagCrashpadReportGfxTechnology": true,
+    "FFlagReportGfxTechnologyOnANR": true,
+    "DFFlagEnableToSwitchToSettingsAppWithRouteMac": true,
+    "DFFlagEnableToSwitchToSettingsAppWithRouteWin32": true,
+    "FFlagCrashpadReportGfxTechnologyMac": true,
+    "FFlagCrashpadReportGfxTechnologyStudio": true,
+    "FFlagCrashpadReportGfxTechnologyWindows": true,
+    "FFlagEnableSeamlessVoiceConnectDisconnectButton2": true,
+    "FFlagACEFaceAnimationEditorUIFixes": true,
+    "FFlagMeshLoDAnalyticsFixIsLocalAsset": true,
+    "EnableToSwitchToSettingsAppWithRouteAndroid": true,
+    "FFlagFixPeekViewJitter5": true,
+    "FFlagTCTexturesListInImGui": true,
+    "FFlagAXTryOnAvatarProperties2": true,
+    "FFlagVideoFrameSupportAppContent": true,
+    "FFlagEnableRetryForLinkingProtocolFetch": true,
+    "FFlagEnableToSwitchToSettingsAppWithRouteLua": true,
+    "FFlagShowDevicePermissionsModal3": true,
+    "FFlagAXLooksBackendToasts_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagAXLooksComposerPolish_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagFFlagAXRepositionLooksFormKeyboard_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagLooksComposerConfirmationModal_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagHideStartupController_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:51:03",
+    "FFlagRenderCrashOnFailedMemoryMap2": true,
+    "FFlagAXFixBundleVerifiedBadgeInWidgets_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagAXHideRecommendationsOnFetchFailure_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagFixDuplicateBubblesWithChatChat_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:13:53",
+    "FFlagAXSupportShareForLook3": true,
+    "FFlagAXCommunityAvatarSharePrompt": true,
+    "FFlagLooksAvatarPDPShowDelete": true,
+    "FFlagGeometryBuffersTelemetry_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:25:52",
+    "FFlagAXCommunityAvatarSharePromptHandleErrors": true,
+    "FFlagAXEnableLookComposer3": true,
+    "FFlagAXLookViewportCameraAlignment": true,
+    "DFIntRobloxTelemetryPointV2ProdTrafficPercent_Staged": "1;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:30:39",
+    "FFlagAXMySharedAvatarsTitleTooltip2": true,
+    "FFlagFFlagAXCommunityAvatarEntryButtonTooltip2": true,
+    "FFlagAddClientChannelToHeartbeat": true,
+    "FFlagAXHideCATooltipsForVR": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -9077,9 +9128,20 @@
     "FFlagLuauUserTypeFunFixNoReadWrite": true,
     "FFlagEnableStartPageBridge": true,
     "FFlagStudioRemoveOptionalToTasksMakeError": true,
+    "FFlagLuauRemoveNotAnyHack": true,
+    "FFlagNoDynamicCastInResizableTooltipWidget": true,
+    "FFlagEnableShowVoiceUIV6": true,
+    "FFlagUseAssetTypeForRefinementKeys": true,
+    "DFFlagDataStoreSerializationRefactor": true,
+    "FFlagLuaStartPageWaitForLogin_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:40:35",
+    "FFlagDynamicUserIDRecentPage_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:41:54",
+    "FFlagAXFixLookComposerExitPrompt_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagAXLookComposerStepsRefactor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagAddMainThreadSignalsDataModelManager": true,
+    "FFlagAXEnableCommunityAvatarsEntryPoint2": true,
+    "DFFlagContentVariantImplicitString": true,
     "FFlagRenderEnableGlobalInstancingMetal": true,
-    "FFlagLuauRemoveNotAnyHack_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:54:01",
-    "FFlagNoDynamicCastInResizableTooltipWidget_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:14:35",
+    "FFlagVoiceChatStopSendingIceCandidate": false,
     "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
     "FFlagEnableAdsMouseUnlock": true,
@@ -9114,7 +9176,6 @@
     "DFFlagTeleportJoinBack": false,
     "FIntThrottleParticipantsUpdateMs2": 500,
     "DFFlagDoJoinBackTeleport": false,
-    "FFlagAXTryOnAvatarProperties2": true,
     "FFlagSupportLooksTileFooter3": false,
     "DFIntCLI102833TelemFailureReportsPerMillion": 1000,
     "DFIntCLI102833TelemSuccessReportsPerMillion": 1,
@@ -9159,7 +9220,6 @@
     "DFFlagFixContainerAsserts": false,
     "FFlagEnableChatLineReporting2": true,
     "FFlagProfilePlatformEnableFriendStatusInQuickLinksEvent": true,
-    "FFlagUseCoreLuaSettings2": true,
     "FFlagUIDragDetectorMinMaxDragTranslationFix": true,
     "FFlagUIDragDetectorAddProfiler": true,
     "FFlagUIDragDetectorEnableUseWithMorePlugins": true,
@@ -9190,13 +9250,17 @@
     "FFlagGameBasicSettingsFramerateCap5": true,
     "DFFlagSendCapabilityTelemetry": true,
     "FFlagRefactorTeleportServiceGlobalFields4": true,
-    "DFIntCapabilityTelemetryThrottleHundredthsPercent": 1,
-    "FLogSignalRNotification": 0,
-    "DFFlagCapsCallableCheck_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:40:13",
-    "DFIntCapabilityUnassignedUseHundredthsPercentage_Staged": "1;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:41:30",
-    "DFIntCapabilityRegularUseHundredthsPercentage_Staged": "1;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:42:15",
-    "DFFlagEnableDeviceMemoryPercentageForHarmony_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:21:57",
+    "DFIntCapabilityTelemetryThrottleHundredthsPercent": 5,
     "DFFlagReportMoreMemoryStatsInMemoryProfilingSnapshots": true,
+    "DFIntCapabilityRegularUseHundredthsPercentage": 1000,
+    "DFIntCapabilityUnassignedUseHundredthsPercentage": 1000,
+    "DFFlagEnableDeviceMemoryPercentageForHarmony": true,
+    "FFlagPrefetchSendStatus": true,
+    "FFlagUIDragDetectorCounterEnabled": true,
+    "DFIntRbxStorageErrorLogHundredthsPercent": 100,
+    "DFIntRbxStorageInitHundredthsPercent": 100,
+    "DFIntRbxStorageErrorLogHundredthsPercent_Staged": "500;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:25:44",
+    "FLogSignalRNotification": 0,
     "FStringFeature_CookieProtocolEnabled": "496;100",
     "FFlagDebugLuaAppValidateProps": true,
     "DFLogTrackHttpRequest": 0,
@@ -9209,9 +9273,8 @@
     "FFlagAudioEqualizerEditorSanitizeMidRange": true,
     "FFlagSceneHashMaps4": true,
     "FFlagEnableVisBugChecks27": true,
-    "FFlagEnableAnimatorAnalyticsForRetargeting_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:28:29",
-    "FStringFlagRepoGitHashFastString": "5200899736a2b49655df4ab9743265ae3eeccdcb",
-    "DFStringFlagRepoGitHashDynamicString": "5200899736a2b49655df4ab9743265ae3eeccdcb",
-    "FStringFlipTimeStampFastString": "2024-10-28T17:28:12.277Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-28T17:28:12.277Z"
+    "FStringFlagRepoGitHashFastString": "b1c1362de8a1fb30d8f0c586fdd7dec443b3d5a1",
+    "DFStringFlagRepoGitHashDynamicString": "b1c1362de8a1fb30d8f0c586fdd7dec443b3d5a1",
+    "FStringFlipTimeStampFastString": "2024-10-28T22:42:32.864Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:42:32.864Z"
 }
