--- a/UWPApp.json
+++ b/UWPApp.json
@@ -7356,7 +7356,7 @@
     "FFlagMarkTextDirtyIncludingHidden": true,
     "FLogFMOD": "Error,6",
     "FFlagDevVoiceChatHandleSubscriptionFeedStartedEvent": false,
-    "FFlagUnifySessionTrackingReporting2": false,
+    "FFlagUnifySessionTrackingReporting2": true,
     "FFlagStudioDeviceEmulatorPS5Emulation": true,
     "FFlagUGCValidationValidateTransparencyEnhancedErrorMessage": true,
     "FFlagStudioRunIncrementalPatchBuildPrePlaySolo": true,
@@ -7933,7 +7933,6 @@
     "FFlagAppChatTiltMenuConnectIcon": true,
     "FFlagAppChatUseNewSelectChatMembers2": true,
     "DFFlagSimSolverCleanupAeroMemScopes2": true,
-    "DFStringDynamicRCCMemoryLimitsCustomPoliciesJson": "{{\"type\": \"MinLimitAtCapacity\", \"playerCapacity\": 200, \"valueMB\": 13000}}",
     "FFlagAXLookViewportUseFallbackEmote": true,
     "DFFlagInferredCrashSkipUpdatingUserIdOnLogOut": true,
     "DFFlagUnifyLegacyJointGeometry": true,
@@ -7943,7 +7942,6 @@
     "FFlagFixRolloutExpirationParsingLogic": true,
     "FFlagModernizeSupportsSwitchToSettingsApp": true,
     "FFlagFixBannerButtonSize": true,
-    "FFlagRemoveEnrollmentMap": true,
     "FFlagFixSafetyBubbleWidth": true,
     "FFlagTPoseBlockyDetectionUseLocalTransformFix": true,
     "FFlagForgotPasswordConsoleVR": true,
@@ -8123,22 +8121,75 @@
     "FFlagFixCapturesExperiencesOverride": true,
     "FFlagEnableSplitButtonWithoutActionDropdown": true,
     "FFlagHideCoreGui": true,
-    "DFIntPacketMissingFrameWindowReportIntervalSec": 60000,
+    "DFIntPacketMissingFrameWindowReportIntervalSec": 300000,
     "FFlagAllowSoundServiceIgnoreGameSettings": true,
     "FFlagEnableCoreVoiceManagerEmitOnReportJoinFailed": true,
     "FFlagEnableTopBarIconButtonBackgroundProps": true,
     "FFlagEnableCrossDMEventSequencing": true,
     "FFlagJoinCrossExpVoiceWithPartyId": true,
     "DFIntBatchPostLimit": 20,
-    "FFlagInsertServiceIsLocalFileFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:38:59",
-    "DFFlagMeasureMissedProcessPackets2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:39:42",
-    "FFlagUseCoreLuaSettings2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:07:48",
-    "FFlagUseCoreDebugSettings2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:13",
-    "DFFlagSimAeroEnableFluidForceSensor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:52",
-    "FFlagDeprecateIos12Apis_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:14:59",
     "FFlagEnableLifeCycleManagerLua": true,
     "FFlagRenderReportGfxTechnology": true,
     "FFlagRenderTestWaitForPendingUpdates6": true,
+    "FFlagInsertServiceIsLocalFileFix": true,
+    "DFFlagMeasureMissedProcessPackets2": true,
+    "FFlagUseCoreDebugSettings2": true,
+    "FFlagUseCoreLuaSettings2": true,
+    "DFFlagSimAeroEnableFluidForceSensor": true,
+    "FFlagDeprecateIos12Apis": true,
+    "FFlagFixSmoothWaterLocalLights": true,
+    "FFlagVoxelizerFixUnalignedRead": true,
+    "FFlagComputeBoxMappedDataOnDemand2": true,
+    "FFlagEnableConnectDisconnectAnalytics": true,
+    "FFlagEnableConnectDisconnectButtonAnalytics": true,
+    "FFlagEnableConnectDisconnectInSettingsAndChrome": true,
+    "FFlagSendDevicePermissionsModalAnalytics": true,
+    "FFlagPersistentVoiceDisconnectV2": true,
+    "FFlagGetRawMicrophonePermissions": true,
+    "FFlagJoinWithoutMicPermissions3": true,
+    "FFlagCapturesSupportExternalStorageOSX": true,
+    "FFlagEnableSeamlessVoiceUX2": true,
+    "FFlagSeamlessJoinWithoutVoice": true,
+    "FFlagSeamlessVoiceFTUXV2": true,
+    "FFlagCrashpadReportGfxTechnology": true,
+    "FFlagReportGfxTechnologyOnANR": true,
+    "DFFlagEnableToSwitchToSettingsAppWithRouteMac": true,
+    "DFFlagEnableToSwitchToSettingsAppWithRouteWin32": true,
+    "FFlagCrashpadReportGfxTechnologyMac": true,
+    "FFlagCrashpadReportGfxTechnologyStudio": true,
+    "FFlagCrashpadReportGfxTechnologyWindows": true,
+    "FFlagEnableSeamlessVoiceConnectDisconnectButton2": true,
+    "FFlagACEFaceAnimationEditorUIFixes": true,
+    "FFlagMeshLoDAnalyticsFixIsLocalAsset": true,
+    "EnableToSwitchToSettingsAppWithRouteAndroid": true,
+    "FFlagFixPeekViewJitter5": true,
+    "FFlagTCTexturesListInImGui": true,
+    "FFlagAXTryOnAvatarProperties2": true,
+    "FFlagVideoFrameSupportAppContent": true,
+    "FFlagEnableRetryForLinkingProtocolFetch": true,
+    "FFlagEnableToSwitchToSettingsAppWithRouteLua": true,
+    "FFlagShowDevicePermissionsModal3": true,
+    "FFlagAXLooksBackendToasts_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagAXLooksComposerPolish_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagFFlagAXRepositionLooksFormKeyboard_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagLooksComposerConfirmationModal_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagHideStartupController_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:51:03",
+    "FFlagRenderCrashOnFailedMemoryMap2": true,
+    "FFlagAXFixBundleVerifiedBadgeInWidgets_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagAXHideRecommendationsOnFetchFailure_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagFixDuplicateBubblesWithChatChat_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:13:53",
+    "FFlagAXSupportShareForLook3": true,
+    "FFlagAXCommunityAvatarSharePrompt": true,
+    "FFlagLooksAvatarPDPShowDelete": true,
+    "FFlagGeometryBuffersTelemetry_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:25:52",
+    "FFlagAXCommunityAvatarSharePromptHandleErrors": true,
+    "FFlagAXEnableLookComposer3": true,
+    "FFlagAXLookViewportCameraAlignment": true,
+    "DFIntRobloxTelemetryPointV2ProdTrafficPercent_Staged": "1;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:30:39",
+    "FFlagAXMySharedAvatarsTitleTooltip2": true,
+    "FFlagFFlagAXCommunityAvatarEntryButtonTooltip2": true,
+    "FFlagAddClientChannelToHeartbeat": true,
+    "FFlagAXHideCATooltipsForVR": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -8272,7 +8323,7 @@
     "FFlagReportDesktopClientOsVersion": false,
     "FIntShareInviteLinkContextMenuV1RolloutPercentage": 100,
     "FFlagLuaAppColorSystem1_1TestCache1": true,
-    "FFlagLuaAppColorSystem1_1TestEnabled1": true,
+    "FFlagLuaAppColorSystem1_1TestEnabled1": false,
     "FFlagLuaAppUseUIBloxColorPalettes1": true,
     "FFlagSignalRLogTotalMessageDelivered": true,
     "DFFlagHttpCacheTrackAllAssets2": true,
@@ -8315,7 +8366,6 @@
     "DFFlagTeleportJoinBack": false,
     "FFlagTestProcessTimestampCall": true,
     "DFFlagDoJoinBackTeleport": false,
-    "FFlagAXTryOnAvatarProperties2": true,
     "FFlagAXDefaultMobileUIToFullShopIXPEnabled": true,
     "FFlagAXDisableWidgetPlatformLayerExposure": true,
     "FFlagAXAvatarFetchResultCamelCase": true,
@@ -8343,8 +8393,8 @@
     "FFlagAssetPreloadingIXP": true,
     "FFlagUserFixOrbitalCam": true,
     "FFlagScreenshotsIsActive_v1": true,
-    "FStringFlagRepoGitHashFastString": "5200899736a2b49655df4ab9743265ae3eeccdcb",
-    "DFStringFlagRepoGitHashDynamicString": "5200899736a2b49655df4ab9743265ae3eeccdcb",
-    "FStringFlipTimeStampFastString": "2024-10-28T17:28:12.277Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-28T17:28:12.277Z"
+    "FStringFlagRepoGitHashFastString": "b1c1362de8a1fb30d8f0c586fdd7dec443b3d5a1",
+    "DFStringFlagRepoGitHashDynamicString": "b1c1362de8a1fb30d8f0c586fdd7dec443b3d5a1",
+    "FStringFlipTimeStampFastString": "2024-10-28T22:42:32.864Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:42:32.864Z"
 }
