--- a/iOSApp.json
+++ b/iOSApp.json
@@ -7933,7 +7933,6 @@
     "FFlagAppChatTiltMenuConnectIcon": true,
     "FFlagAppChatUseNewSelectChatMembers2": true,
     "DFFlagSimSolverCleanupAeroMemScopes2": true,
-    "DFStringDynamicRCCMemoryLimitsCustomPoliciesJson": "{{\"type\": \"MinLimitAtCapacity\", \"playerCapacity\": 200, \"valueMB\": 13000}}",
     "FFlagAXLookViewportUseFallbackEmote": true,
     "DFFlagInferredCrashSkipUpdatingUserIdOnLogOut": true,
     "DFFlagUnifyLegacyJointGeometry": true,
@@ -7943,7 +7942,6 @@
     "FFlagFixRolloutExpirationParsingLogic": true,
     "FFlagModernizeSupportsSwitchToSettingsApp": true,
     "FFlagFixBannerButtonSize": true,
-    "FFlagRemoveEnrollmentMap": true,
     "FFlagFixSafetyBubbleWidth": true,
     "FFlagTPoseBlockyDetectionUseLocalTransformFix": true,
     "FFlagForgotPasswordConsoleVR": true,
@@ -8123,22 +8121,75 @@
     "FFlagFixCapturesExperiencesOverride": true,
     "FFlagEnableSplitButtonWithoutActionDropdown": true,
     "FFlagHideCoreGui": true,
-    "DFIntPacketMissingFrameWindowReportIntervalSec": 60000,
+    "DFIntPacketMissingFrameWindowReportIntervalSec": 300000,
     "FFlagAllowSoundServiceIgnoreGameSettings": true,
     "FFlagEnableCoreVoiceManagerEmitOnReportJoinFailed": true,
     "FFlagEnableTopBarIconButtonBackgroundProps": true,
     "FFlagEnableCrossDMEventSequencing": true,
     "FFlagJoinCrossExpVoiceWithPartyId": true,
     "DFIntBatchPostLimit": 20,
-    "FFlagRenderReportGfxTechnology_Rollout": "true;60;2024-10-28T16:22:14",
-    "FFlagRenderTestWaitForPendingUpdates6_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:25:22",
-    "FFlagInsertServiceIsLocalFileFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:38:59",
-    "DFFlagMeasureMissedProcessPackets2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:39:42",
-    "FFlagUseCoreLuaSettings2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:07:48",
-    "FFlagUseCoreDebugSettings2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:13",
-    "DFFlagSimAeroEnableFluidForceSensor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:52",
-    "FFlagDeprecateIos12Apis_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:14:59",
     "FFlagEnableLifeCycleManagerLua": true,
+    "FFlagRenderReportGfxTechnology": true,
+    "FFlagRenderTestWaitForPendingUpdates6": true,
+    "FFlagInsertServiceIsLocalFileFix": true,
+    "DFFlagMeasureMissedProcessPackets2": true,
+    "FFlagUseCoreDebugSettings2": true,
+    "FFlagUseCoreLuaSettings2": true,
+    "DFFlagSimAeroEnableFluidForceSensor": true,
+    "FFlagDeprecateIos12Apis": true,
+    "FFlagFixSmoothWaterLocalLights": true,
+    "FFlagVoxelizerFixUnalignedRead": true,
+    "FFlagComputeBoxMappedDataOnDemand2": true,
+    "FFlagEnableConnectDisconnectAnalytics": true,
+    "FFlagEnableConnectDisconnectButtonAnalytics": true,
+    "FFlagEnableConnectDisconnectInSettingsAndChrome": true,
+    "FFlagSendDevicePermissionsModalAnalytics": true,
+    "FFlagPersistentVoiceDisconnectV2": true,
+    "FFlagGetRawMicrophonePermissions": true,
+    "FFlagJoinWithoutMicPermissions3": true,
+    "FFlagCapturesSupportExternalStorageOSX": true,
+    "FFlagEnableSeamlessVoiceUX2": true,
+    "FFlagSeamlessJoinWithoutVoice": true,
+    "FFlagSeamlessVoiceFTUXV2": true,
+    "FFlagCrashpadReportGfxTechnology": true,
+    "FFlagReportGfxTechnologyOnANR": true,
+    "DFFlagEnableToSwitchToSettingsAppWithRouteMac": true,
+    "DFFlagEnableToSwitchToSettingsAppWithRouteWin32": true,
+    "FFlagCrashpadReportGfxTechnologyMac": true,
+    "FFlagCrashpadReportGfxTechnologyStudio": true,
+    "FFlagCrashpadReportGfxTechnologyWindows": true,
+    "FFlagEnableSeamlessVoiceConnectDisconnectButton2": true,
+    "FFlagACEFaceAnimationEditorUIFixes": true,
+    "FFlagMeshLoDAnalyticsFixIsLocalAsset": true,
+    "EnableToSwitchToSettingsAppWithRouteAndroid": true,
+    "FFlagFixPeekViewJitter5": true,
+    "FFlagTCTexturesListInImGui": true,
+    "FFlagAddClientChannelToHeartbeat_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:32:18",
+    "FFlagAXTryOnAvatarProperties2": true,
+    "FFlagFFlagAXCommunityAvatarEntryButtonTooltip2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:34:45",
+    "FFlagVideoFrameSupportAppContent": true,
+    "FFlagAXHideCATooltipsForVR_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:38:29",
+    "FFlagEnableRetryForLinkingProtocolFetch": true,
+    "FFlagEnableToSwitchToSettingsAppWithRouteLua": true,
+    "FFlagShowDevicePermissionsModal3": true,
+    "FFlagAXLooksBackendToasts_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagAXLooksComposerPolish_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagFFlagAXRepositionLooksFormKeyboard_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagLooksComposerConfirmationModal_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagHideStartupController_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:51:03",
+    "FFlagRenderCrashOnFailedMemoryMap2": true,
+    "FFlagAXFixBundleVerifiedBadgeInWidgets_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagAXHideRecommendationsOnFetchFailure_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagFixDuplicateBubblesWithChatChat_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:13:53",
+    "FFlagAXSupportShareForLook3": true,
+    "FFlagAXCommunityAvatarSharePrompt": true,
+    "FFlagLooksAvatarPDPShowDelete": true,
+    "FFlagGeometryBuffersTelemetry_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:25:52",
+    "FFlagAXCommunityAvatarSharePromptHandleErrors": true,
+    "FFlagAXEnableLookComposer3": true,
+    "FFlagAXLookViewportCameraAlignment": true,
+    "DFIntRobloxTelemetryPointV2ProdTrafficPercent_Staged": "1;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:30:39",
+    "FFlagAXMySharedAvatarsTitleTooltip2": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -8331,7 +8382,7 @@
     "FFlagiOSCopyEntryIndex": false,
     "FFlagShouldTrackPNMetadataRetrievedAppState": true,
     "FFlagLuaAppColorSystem1_1TestCache1": true,
-    "FFlagLuaAppColorSystem1_1TestEnabled1": true,
+    "FFlagLuaAppColorSystem1_1TestEnabled1": false,
     "FFlagLuaAppUseUIBloxColorPalettes1": true,
     "FFlagEnableLaunchDataForAllJoins": true,
     "FStringProfileQRPageLoad": "ProfileQRPageLoadiOS",
@@ -8585,7 +8636,6 @@
     "DFFlagDoJoinBackTeleport": false,
     "FFlagSimEnableCSG46_PlaceFilter": "true;14182040324;17298617678;17365283247;16153613601;7655489843;17400898103;9213869953;17601020405;15121756860;8325420137;17191083560;15484491121;17684763172;4705424376;16977524432;12134682271;10597909307;6059947762;17327054881;17478668021;13546288145;15532962292;9863689497;17469332289;17469323359;17739873639;14001440964;11177641368;17660133624;16679850585;14592111376;14641042570;11510416200;6806569448;17152784158;15230420430;17342613578;17744101991;17744224453;11835639544;13905975027;13905671876",
     "FFlagLuaAppPropagateFriendsCarouselHeader": true,
-    "FFlagAXTryOnAvatarProperties2": true,
     "FFlagAXAvatarWidgetLogging": true,
     "FFlagMoreStrictLimitOnRelayout2": true,
     "FFlagAwaitLoginCompletionForDisambiguationFlow": true,
@@ -8725,8 +8775,18 @@
     "FFlagScreenshotsAddCustomToastDuration": true,
     "FFlagSendWebViewUserAgentEnabledIOS": true,
     "FFlagGetFriendCountFromNetwork": true,
-    "FStringFlagRepoGitHashFastString": "57bd8003611bf3ba1e7de6979ff72ac82f76ad84",
-    "DFStringFlagRepoGitHashDynamicString": "57bd8003611bf3ba1e7de6979ff72ac82f76ad84",
-    "FStringFlipTimeStampFastString": "2024-10-28T17:23:18.480Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-28T17:23:18.480Z"
+    "FFlagVoxelGridNew5_PlaceFilter": "false;14870105714;14119723130;5301474388;14848219783;12805291036;5233782396;15031522190;11729688377;11879754496",
+    "FFlagEnableShowVoiceUIV6": true,
+    "FFlagEnableShowVoiceUIV5": true,
+    "FIntScreenshotsExtraToastDuration": 10,
+    "DFFlagTeleportPreloadingMetrics5": true,
+    "FFlagScreenshotsAddSubmissionCooldownToast_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:37:45",
+    "FFlagAXFixLookComposerExitPrompt_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagAXLookComposerStepsRefactor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagAXEnableCommunityAvatarsEntryPoint2": true,
+    "FFlagSendWebViewUserAgentEnabled_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:18:04",
+    "FStringFlagRepoGitHashFastString": "1a4119b90f9a880f9a95a045ff3f0c44a7515542",
+    "DFStringFlagRepoGitHashDynamicString": "1a4119b90f9a880f9a95a045ff3f0c44a7515542",
+    "FStringFlipTimeStampFastString": "2024-10-28T22:34:52.887Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:34:52.887Z"
 }
