--- a/PCStudioApp.json
+++ b/PCStudioApp.json
@@ -7933,7 +7933,6 @@
     "FFlagAppChatTiltMenuConnectIcon": true,
     "FFlagAppChatUseNewSelectChatMembers2": true,
     "DFFlagSimSolverCleanupAeroMemScopes2": true,
-    "DFStringDynamicRCCMemoryLimitsCustomPoliciesJson": "{{\"type\": \"MinLimitAtCapacity\", \"playerCapacity\": 200, \"valueMB\": 13000}}",
     "FFlagAXLookViewportUseFallbackEmote": true,
     "DFFlagInferredCrashSkipUpdatingUserIdOnLogOut": true,
     "DFFlagUnifyLegacyJointGeometry": true,
@@ -7943,7 +7942,6 @@
     "FFlagFixRolloutExpirationParsingLogic": true,
     "FFlagModernizeSupportsSwitchToSettingsApp": true,
     "FFlagFixBannerButtonSize": true,
-    "FFlagRemoveEnrollmentMap": true,
     "FFlagFixSafetyBubbleWidth": true,
     "FFlagTPoseBlockyDetectionUseLocalTransformFix": true,
     "FFlagForgotPasswordConsoleVR": true,
@@ -8123,22 +8121,75 @@
     "FFlagFixCapturesExperiencesOverride": true,
     "FFlagEnableSplitButtonWithoutActionDropdown": true,
     "FFlagHideCoreGui": true,
-    "DFIntPacketMissingFrameWindowReportIntervalSec": 60000,
+    "DFIntPacketMissingFrameWindowReportIntervalSec": 300000,
     "FFlagAllowSoundServiceIgnoreGameSettings": true,
     "FFlagEnableCoreVoiceManagerEmitOnReportJoinFailed": true,
     "FFlagEnableTopBarIconButtonBackgroundProps": true,
     "FFlagEnableCrossDMEventSequencing": true,
     "FFlagJoinCrossExpVoiceWithPartyId": true,
     "DFIntBatchPostLimit": 20,
-    "FFlagRenderReportGfxTechnology_Rollout": "true;60;2024-10-28T16:22:14",
-    "FFlagRenderTestWaitForPendingUpdates6_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:25:22",
-    "FFlagInsertServiceIsLocalFileFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:38:59",
-    "DFFlagMeasureMissedProcessPackets2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:39:42",
-    "FFlagShorelinesRemoveDialog": true,
-    "FFlagUseCoreDebugSettings2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:13",
-    "DFFlagSimAeroEnableFluidForceSensor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:10:52",
-    "FFlagDeprecateIos12Apis_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:14:59",
     "FFlagEnableLifeCycleManagerLua": true,
+    "FFlagRenderReportGfxTechnology": true,
+    "FFlagRenderTestWaitForPendingUpdates6": true,
+    "FFlagInsertServiceIsLocalFileFix": true,
+    "DFFlagMeasureMissedProcessPackets2": true,
+    "FFlagUseCoreDebugSettings2": true,
+    "FFlagUseCoreLuaSettings2": true,
+    "DFFlagSimAeroEnableFluidForceSensor": true,
+    "FFlagDeprecateIos12Apis": true,
+    "FFlagFixSmoothWaterLocalLights": true,
+    "FFlagVoxelizerFixUnalignedRead": true,
+    "FFlagComputeBoxMappedDataOnDemand2": true,
+    "FFlagEnableConnectDisconnectAnalytics": true,
+    "FFlagEnableConnectDisconnectButtonAnalytics": true,
+    "FFlagEnableConnectDisconnectInSettingsAndChrome": true,
+    "FFlagSendDevicePermissionsModalAnalytics": true,
+    "FFlagPersistentVoiceDisconnectV2": true,
+    "FFlagGetRawMicrophonePermissions": true,
+    "FFlagJoinWithoutMicPermissions3": true,
+    "FFlagCapturesSupportExternalStorageOSX": true,
+    "FFlagEnableSeamlessVoiceUX2": true,
+    "FFlagSeamlessJoinWithoutVoice": true,
+    "FFlagSeamlessVoiceFTUXV2": true,
+    "FFlagCrashpadReportGfxTechnology": true,
+    "FFlagReportGfxTechnologyOnANR": true,
+    "DFFlagEnableToSwitchToSettingsAppWithRouteMac": true,
+    "DFFlagEnableToSwitchToSettingsAppWithRouteWin32": true,
+    "FFlagCrashpadReportGfxTechnologyMac": true,
+    "FFlagCrashpadReportGfxTechnologyStudio": true,
+    "FFlagCrashpadReportGfxTechnologyWindows": true,
+    "FFlagEnableSeamlessVoiceConnectDisconnectButton2": true,
+    "FFlagACEFaceAnimationEditorUIFixes": true,
+    "FFlagMeshLoDAnalyticsFixIsLocalAsset": true,
+    "EnableToSwitchToSettingsAppWithRouteAndroid": true,
+    "FFlagFixPeekViewJitter5": true,
+    "FFlagTCTexturesListInImGui": true,
+    "FFlagAXTryOnAvatarProperties2": true,
+    "FFlagVideoFrameSupportAppContent": true,
+    "FFlagAXHideCATooltipsForVR_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:38:29",
+    "FFlagEnableRetryForLinkingProtocolFetch": true,
+    "FFlagEnableToSwitchToSettingsAppWithRouteLua": true,
+    "FFlagShowDevicePermissionsModal3": true,
+    "FFlagAXLooksBackendToasts_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagAXLooksComposerPolish_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagFFlagAXRepositionLooksFormKeyboard_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagLooksComposerConfirmationModal_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
+    "FFlagHideStartupController_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:51:03",
+    "FFlagRenderCrashOnFailedMemoryMap2": true,
+    "FFlagAXFixBundleVerifiedBadgeInWidgets_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagAXHideRecommendationsOnFetchFailure_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagFixDuplicateBubblesWithChatChat_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:13:53",
+    "FFlagAXSupportShareForLook3": true,
+    "FFlagAXCommunityAvatarSharePrompt": true,
+    "FFlagLooksAvatarPDPShowDelete": true,
+    "FFlagGeometryBuffersTelemetry_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:25:52",
+    "FFlagAXCommunityAvatarSharePromptHandleErrors": true,
+    "FFlagAXEnableLookComposer3": true,
+    "FFlagAXLookViewportCameraAlignment": true,
+    "DFIntRobloxTelemetryPointV2ProdTrafficPercent_Staged": "1;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:30:39",
+    "FFlagAXMySharedAvatarsTitleTooltip2": true,
+    "FFlagFFlagAXCommunityAvatarEntryButtonTooltip2": true,
+    "FFlagAddClientChannelToHeartbeat": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -9077,9 +9128,21 @@
     "FFlagLuauUserTypeFunFixNoReadWrite": true,
     "FFlagEnableStartPageBridge": true,
     "FFlagStudioRemoveOptionalToTasksMakeError": true,
+    "FFlagLuauRemoveNotAnyHack": true,
+    "FFlagNoDynamicCastInResizableTooltipWidget": true,
+    "FFlagEnableShowVoiceUIV6": true,
+    "FFlagUseAssetTypeForRefinementKeys": true,
+    "DFFlagDataStoreSerializationRefactor": true,
+    "FFlagScreenshotsSetupEnabled_v1_Rollout": "false;60;2024-10-28T21:37:23",
+    "FFlagLuaStartPageWaitForLogin_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:40:35",
+    "FFlagDynamicUserIDRecentPage_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:41:54",
+    "FFlagAXFixLookComposerExitPrompt_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagAXLookComposerStepsRefactor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
+    "FFlagAddMainThreadSignalsDataModelManager": true,
+    "FFlagAXEnableCommunityAvatarsEntryPoint2": true,
+    "DFFlagContentVariantImplicitString": true,
     "FFlagRenderEnableGlobalInstancingD3D11": true,
-    "FFlagLuauRemoveNotAnyHack_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:54:01",
-    "FFlagNoDynamicCastInResizableTooltipWidget_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:14:35",
+    "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
     "FFlagEnableAdsMouseUnlock": true,
     "DFIntExperienceStateCaptureHighlightTransparencyPercent_PlaceFilter": "45;920587237",
@@ -9112,7 +9175,6 @@
     "DFFlagEnableGameJoinPriority": true,
     "DFFlagTeleportJoinBack": false,
     "DFFlagDoJoinBackTeleport": false,
-    "FFlagAXTryOnAvatarProperties2": true,
     "FFlagSupportLooksTileFooter3": false,
     "DFIntCLI102833TelemFailureReportsPerMillion": 1000,
     "DFIntCLI102833TelemSuccessReportsPerMillion": 1,
@@ -9156,7 +9218,6 @@
     "DFFlagFixContainerAsserts": false,
     "FFlagEnableChatLineReporting2": true,
     "FFlagProfilePlatformEnableFriendStatusInQuickLinksEvent": true,
-    "FFlagUseCoreLuaSettings2": true,
     "FFlagUIDragDetectorMinMaxDragTranslationFix": true,
     "FFlagUIDragDetectorAddProfiler": true,
     "FFlagUIDragDetectorEnableUseWithMorePlugins": true,
@@ -9186,14 +9247,16 @@
     "FFlagAXLogFiltersForOrganicClick3": true,
     "FFlagDragDetectorCounterEnabled": true,
     "DFFlagSendCapabilityTelemetry": true,
-    "DFIntCapabilityTelemetryThrottleHundredthsPercent": 1,
-    "DFFlagReportMoreMemoryStatsInMemoryProfilingSnapshots_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:22:55",
+    "DFIntCapabilityTelemetryThrottleHundredthsPercent": 5,
+    "DFFlagReportMoreMemoryStatsInMemoryProfilingSnapshots": true,
+    "DFIntCapabilityRegularUseHundredthsPercentage": 1000,
+    "DFIntCapabilityUnassignedUseHundredthsPercentage": 1000,
+    "DFFlagEnableDeviceMemoryPercentageForHarmony": true,
+    "FFlagRefactorTeleportServiceGlobalFields4": true,
+    "FFlagUIDragDetectorCounterEnabled": true,
+    "DFIntRbxStorageErrorLogHundredthsPercent": 100,
+    "DFIntRbxStorageInitHundredthsPercent": 100,
     "FFlagDebugLuaAppValidateProps": true,
-    "DFFlagCapsCallableCheck_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:40:13",
-    "DFIntCapabilityUnassignedUseHundredthsPercentage_Staged": "1;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:41:30",
-    "DFIntCapabilityRegularUseHundredthsPercentage_Staged": "1;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:42:15",
-    "DFFlagEnableDeviceMemoryPercentageForHarmony_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:21:57",
-    "FFlagRefactorTeleportServiceGlobalFields4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T17:25:27",
     "FStringFeature_CookieProtocolEnabled": "524;100",
     "FFlagUseParallelTypecheckInLSP2": true,
     "FFlagPathEditorControlPointVisualImprovements2": true,
@@ -9210,9 +9273,8 @@
     "FFlagSimpleTimerUseRuntimeSyncPrims": true,
     "FFlagEnableVisBugChecks27": true,
     "DFFlagUseVisBugChecks_PlaceFilter": "true;7208091524;7902470429;10489114145;9872472334;8481844229;299659045",
-    "FFlagEnableAnimatorAnalyticsForRetargeting_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T16:28:29",
-    "FStringFlagRepoGitHashFastString": "ff14e217e50bec24465a662747b7ee11cabd71b7",
-    "DFStringFlagRepoGitHashDynamicString": "ff14e217e50bec24465a662747b7ee11cabd71b7",
-    "FStringFlipTimeStampFastString": "2024-10-28T17:26:08.223Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-28T17:26:08.223Z"
+    "FStringFlagRepoGitHashFastString": "331a90734c669eb15d84e5e0bb857986cf3f1344",
+    "DFStringFlagRepoGitHashDynamicString": "331a90734c669eb15d84e5e0bb857986cf3f1344",
+    "FStringFlipTimeStampFastString": "2024-10-28T22:37:31.053Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:37:31.053Z"
 }
